# server/openapi_server/controllers/product.py
@@ -1,8 +1,8 @@
 import connexion
 import six
-from openapi_server.models.catalog_item import CatalogItem
+from openapi_server.models.product_item import ProductItem
 from openapi_server.database.database_manager import get_database_session  # noqa: E501
-from openapi_server.database.models import CatalogItem
+from openapi_server.database.models import ProductItem
 from openapi_server import util
 from werkzeug.exceptions import HTTPException
 # from fastapi import HTTPException
@@ -10,30 +10,29 @@ from sqlalchemy.exc import IntegrityError
 import uuid
 
 
-def create_catalog_item(catalog_item):  # noqa: E501
-    """Create catalog item
+def create_product_item(product_item):  # noqa: E501
+    """Create product item
 
      # noqa: E501
 
-    :param catalog_item: 
-    :type catalog_item: dict | bytes
+    :param product_item: 
+    :type product_item: dict | bytes
 
     :rtype: None
     """
     try:
         db = get_database_session()
-        existing_product = db.query(CatalogItem).filter_by(name=catalog_item['name']).first()
+        existing_product = db.query(ProductItem).filter_by(name=product_item['name']).first()
         if existing_product:
             return 'Item with the same name already exists!',400
-        print(catalog_item)
-        catalog = CatalogItem(
-            id=id,
-            name=catalog_item['name'],
-            price=catalog_item['price']
+        product = ProductItem(
+            id= uuid.uuid4(),
+            name=product_item['name'],
+            price=product_item['price']
         )
-        db.add(catalog)
+        db.add(product)
         db.commit()
-        db.refresh(catalog)
+        db.refresh(product)
         return 'Product created successfully!', 201
     except Exception as e:
         db.rollback()
@@ -42,18 +41,18 @@ def create_catalog_item(catalog_item):  # noqa: E501
         db.close()
 
 
-def list_catalog_items():  # noqa: E501
-    """Lists all catalog items
+def list_product_items():  # noqa: E501
+    """Lists all product items
 
      # noqa: E501
 
 
-    :rtype: List[CatalogItem]
+    :rtype: List[ProductItem]
     """
     try:
         db = get_database_session()
         formatted_products = []
-        products = db.query(CatalogItem).all()
+        products = db.query(ProductItem).all()
         for product in products:
             formatted_products.append({
                 'id': product.id,
