# server/openapi_server/models/__init__.py
@@ -4,7 +4,7 @@
 from __future__ import absolute_import
 # import models into model package
 from openapi_server.models.audit_log import AuditLog
-from openapi_server.models.catalog_item import CatalogItem
+from openapi_server.models.product_item import ProductItem
 from openapi_server.models.event import Event
 from openapi_server.models.order import Order
 from openapi_server.models.order_item import OrderItem
